--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
    <p class="text-center tracking-widest text-heading text-zinc-50">This project is licensed under MIT License. See the full license <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/acerx-amj.github.io/blob/main/LICENSE">here</a>.</p>
 
    <div class="flex flex-row items-center justify-center">
-      <a class="sm:mx-5 mx-1 my-3 font-medium text-sky-400 hover:underline" href="mailto:ajm&#46acerx&#64gmail&#46com">Email</a>
+      <a class="sm:mx-5 mx-1 my-3 font-medium text-sky-400 hover:underline" href="mailto:&#097;&#106;&#109;&#046;&#097;&#099;&#101;&#114;&#120;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">Email</a>
       <a class="sm:mx-5 mx-1 my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Source</a>
       <a class="sm:mx-5 mx-1 my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ">Github</a>
       <a class="sm:mx-5 mx-1 my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/">Itch.io</a>
