--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,7 @@ body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
-   height: 100vh;
+   height: 100%;
 }
 
 article {
@@ -149,7 +149,7 @@ footer {
    width: 100vw;
    height: 140px;
    padding-top: 20px;
-   margin-top: 100px;
+   margin-top: 125px;
 }
 
 footer h1, footer p {
@@ -231,6 +231,38 @@ footer div {
 #search-bar:focus {
    background-color: var(--dark-blue);
    border-color: var(--blue);
+}
+
+#project-buttons {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+}
+
+#project-buttons button {
+   width: 45px;
+   height: 45px;
+   margin: 5px;
+   margin-top: 30px;
+
+   color: var(--white);
+   font-family: var(--font);
+   font-size: 1.25rem;
+   border: none;
+   border-radius: 6.25px;
+   box-shadow: 1px 3px 5px var(--black), -1px 3px 5px var(--black);
+   background-color: var(--light-gray);
+   transition: scale 100ms, background-color 100ms, border-color 100ms;
+}
+
+#project-buttons button:not(.selected-btn):hover {
+   scale: 1.1;
+   background-color: var(--dark-blue);
+   box-shadow: 1px 3px 5px var(--darker-blue), -1px 3px 5px var(--darker-blue);
+}
+
+#project-buttons .selected-btn {
+   color: var(--blue);
 }
 
 /*
