--- a/style/style.css
+++ b/style/style.css
@@ -188,7 +188,7 @@ footer div {
    gap: 15px;
 }
 
-#projects div, #blogs div, #pages a {
+#projects a, #blogs a, #pages a {
    margin-block: 10px;
    padding: 20px;
    background-color: var(--gray);
@@ -198,7 +198,7 @@ footer div {
    transition: scale 100ms, border 100ms, background-color 100ms, box-shadow 100ms;
 }
 
-#projects div:hover, #blogs div:hover, #pages a:hover {
+#projects a:hover, #blogs a:hover, #pages a:hover {
    scale: 1.015;
    border: 1.5px solid var(--blue);
    background-color: var(--dark-blue);
@@ -214,7 +214,7 @@ footer div {
    margin: 0;
 }
 
-#blogs a:hover, #pages a:hover {
+#projects a:hover, #blogs a:hover, #pages a:hover {
    text-decoration: none;
 }
 
